@@ -39,7 +39,7 @@ test.timeout=2700000
 test.warehouse.dir=${test.dir}/hcat_junit_warehouse
 mvnrepo=http://repo2.maven.org/maven2
 test.src.dir=${basedir}/src/test
-test.junit.output.format=plain
+test.junit.output.format=xml
 test.output=no
 test.excludes=e2e/**
 clover.jar=${clover.home}/lib/clover.jar
